# iis-project

./: .dockerignore  Dockerfile  README.md  biome.json  doc.html  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env  .env.template  Cargo.toml
backend/api/: Cargo.toml
backend/api/src/: errors.rs  main.rs  pagination.rs  schema.rs
backend/api/src/auth/: cookie.rs  jwt.rs
backend/api/src/extractors/: auth_extractor.rs  json_extractor.rs  mod.rs
backend/api/src/routes/: auth.rs  group.rs  group_join_request.rs  location.rs  mod.rs  post.rs  post_tag.rs  search.rs  user.rs  wall.rs
backend/models/: Cargo.toml
backend/models/src/: errors.rs  lib.rs
backend/models/src/domain/: email.rs  group.rs  group_join_request.rs  group_member.rs  location.rs  mod.rs  post.rs  post_comment.rs  post_group_visibility.rs  post_like.rs  post_tag.rs  post_user_visibility.rs  post_visibility.rs  user.rs  users.rs  wall.rs  wall_post.rs
backend/models/src/schema/: group.rs  group_join_request.rs  group_member.rs  location.rs  mod.rs  post.rs  post_comment.rs  post_group_visibility.rs  post_like.rs  post_tag.rs  post_user_visibility.rs  prelude.rs  sea_orm_active_enums.rs  user.rs  wall.rs  wall_post.rs
backend/models/src/tests/: email.rs  group.rs  location.rs  mod.rs  post.rs  post_comment.rs  user.rs
backend/usecase/: Cargo.toml
backend/usecase/src/: lib.rs
backend/usecase/src/group/: add_user_to_group.rs  create_group.rs  delete_group.rs  get_group.rs  get_group_members.rs  get_group_requests.rs  group_member_status.rs  join_group.rs  leave_group.rs  mod.rs  remove_user_from_group.rs  resolve_group_join_request.rs  search_group.rs
backend/usecase/src/location/: create_location.rs  delete_location.rs  mod.rs  search_location.rs
backend/usecase/src/post/: add_post_to_wall.rs  comment_post.rs  create_post.rs  delete_post.rs  get_comment.rs  get_post.rs  get_post_comments.rs  get_post_is_liked_by_user.rs  get_post_likes.rs  like_post.rs  mod.rs  remove_post_from_wall.rs  uncomment_post.rs  unlike_post.rs  update_post.rs  upload_image.rs
backend/usecase/src/post_tag/: create_post_tag.rs  delete_tag.rs  get_post_tags.rs  mod.rs  search_tag.rs
backend/usecase/src/user/: auth_utils.rs  block_user.rs  create_user.rs  get_all_users.rs  get_user.rs  get_user_by_username.rs  mod.rs  register_user.rs  search_user_by_username.rs  unblock_user.rs  update_user.rs  verify_user.rs
backend/usecase/src/visibility/: create_post_group_visibility.rs  create_post_user_visibility.rs  delete_post_group_visibility_use_case.rs  delete_post_user_visibility_use_case.rs  get_post_group_visibility.rs  get_post_user_visibility.rs  mod.rs
backend/usecase/src/wall/: get_feed_posts.rs  get_tag_posts.rs  get_wall_posts.rs  mod.rs  types.rs
fitstagram-api/: Cargo.toml
(+241 files in other folders)
