[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
sea-orm = "1.0.1"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = "1.28.2"
uuid = "1.10.0"
model = { path = "../model" }
migration = { path = "../migration" }
serde_json = "1.0.128"
serde = "1.0.210"
dotenv = "0.15.0"
chrono = "0.4.38"
anyhow = "1.0.89"
