[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.28.2", features = ["full"] }
sea-orm = "1.0.1"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
uuid = "1.10.0"
models = { path = "../models" }
migration = { path = "../migration" }
repository = { path = "../repository" }
usecase = { path = "../usecase" }
serde_json = "1.0.128"
serde = "1.0.210"
dotenv = "0.15.0"
chrono = "0.4.38"
anyhow = "1.0.89"
thiserror = "1.0.64"
validator = "0.18.1"
