[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-extra = { version = "0.9.4", features = ["typed-header", "cookie"] }
axum = "0.7.4"
tokio = { version = "1.28.2", features = ["full"] }
sea-orm = "1.0.1"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
uuid = "1.10.0"
models = { path = "../models" }
migration = { path = "../migration" }
repository = { path = "../repository" }
usecase = { path = "../usecase" }
serde_json = "1.0.128"
serde = "1.0.210"
dotenv = "0.15.0"
chrono = "0.4.38"
anyhow = "1.0.89"
thiserror = "1.0.64"
validator = "0.18.1"
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
redis = "0.27.5"
