[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
sea-orm = "1.0.1"
serde = "1.0.210"
serde_json = "1.0.129"
thiserror = "1.0.64"
uuid = "1.11.0"
validator = { version = "0.18.1", features = ["derive"] }

[lib]
name = "models"
path = "src/lib.rs"
