[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
chrono = "0.4.38"
once_cell = "1.20.2"
regex = "1.11.1"
sea-orm = "1.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
thiserror = "1.0.64"
tokio = "1.41.1"
uuid = { version = "1.11.0", features = ["v4"] }
validator = { version = "0.18.1", features = ["derive"] }

[lib]
name = "models"
path = "src/lib.rs"
